<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/previousResultsScrollView"
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:layout_height="0dp"
            tools:ignore="NestedWeights">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/previousResultsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:lineSpacingExtra="5sp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:paddingBottom="3sp"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="@dimen/min_text_size" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentOperationTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="fill"
            android:maxLength="@integer/max_chars_in_line"
            android:textColor="?android:textColorPrimary"
            android:maxLines="1"
            android:gravity="bottom|end"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            app:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="@dimen/min_text_size"
            android:autoSizeMaxTextSize="@dimen/big_text_size"
            android:autoSizeStepGranularity="@dimen/text_step"
            android:text="@string/initial_operation" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="fill"
            android:gravity="top|end"
            android:maxLines="1"
            android:textSize="@dimen/small_text_size"
            android:layout_marginBottom="0dp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:maxLength="@integer/max_chars_in_line"
            android:textColor="?android:textColorPrimary"
            android:text=""
            android:visibility="gone"
            android:paddingBottom="3sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:columnCount="4"
        app:rowCount="5">

        <Button
            android:id="@+id/buttonClear"
            android:textColor="@color/primary"
            android:backgroundTint="@color/none"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/clear_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="0.7" />

        <Button
            android:id="@+id/buttonOpenBracket"
            android:textColor="@color/primary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/open_bracket"
            app:layout_columnWeight="1"
            app:layout_rowWeight="0.1" />

        <Button
            android:id="@+id/buttonCloseBracket"
            android:textColor="@color/primary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/close_bracket"
            app:layout_columnWeight="1"
            app:layout_rowWeight="0.7" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="75dp"
            android:textColor="@color/primary"
            android:textSize="@dimen/medium_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/divide_btn"
            app:layout_rowWeight="0.7"
            app:layout_columnWeight="0.1" />

        <Button
            android:id="@+id/buttonOne"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/one_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonTwo"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/two_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonThree"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/three_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonMultiply"
            android:textColor="@color/primary"
            android:textSize="@dimen/medium_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/multiply_btn"
            app:layout_columnWeight="0.1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonFour"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/four_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonFive"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/five_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonSix"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/six_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonMinus"
            android:textColor="@color/primary"
            android:textSize="@dimen/medium_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/minus_btn"
            app:layout_columnWeight="0.1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonSeven"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/seven_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonEight"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/eight_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonNine"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/nine_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonPlus"
            android:textColor="@color/primary"
            android:textSize="@dimen/medium_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/plus_btn"
            app:layout_columnWeight="0.1"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:src="@drawable/baseline_keyboard_backspace_24"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:contentDescription="@string/backspace" />

        <Button
            android:id="@+id/buttonZero"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/zero_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonPeriod"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/small_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/period_btn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonEquals"
            android:textColor="?android:textColorPrimaryInverse"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/primary"
            android:text="@string/equals_btn"
            app:layout_columnWeight="0.1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>