<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/none">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_converter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_text_size"
            android:layout_marginEnd="@dimen/small_text_size"
            android:layout_marginStart="@dimen/small_text_size"
            android:background="@color/none"
            android:paddingBottom="@dimen/medium_text_size"
            app:columnCount="3"
            app:rowCount="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_length"
                android:id="@+id/length_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:text="@string/length_btn"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_area"
                android:id="@+id/area_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/area_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_volume"
                android:id="@+id/volume_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/volume_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_mass"
                android:id="@+id/mass_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/mass_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_time"
                android:id="@+id/time_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/time_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_temperature"
                android:id="@+id/temp_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/temp_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_speed"
                android:id="@+id/speed_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/speed_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_notation"
                android:id="@+id/notation_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/notation_btn"
                app:layout_columnWeight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:drawableTop="@drawable/icon_data"
                android:id="@+id/data_btn"
                style="@style/button_converter"
                android:textAllCaps="false"
                android:paddingTop="44sp"
                android:gravity="bottom|center_horizontal"
                app:layout_gravity="top"
                android:text="@string/data_btn"
                app:layout_columnWeight="1"
                />

        </androidx.gridlayout.widget.GridLayout>

    </ScrollView>

</LinearLayout>